Ref(currency-switcher): using forms alternative

--- a/src/app/currency-switcher/currency-switcher.component.html
+++ b/src/app/currency-switcher/currency-switcher.component.html
@@ -1,8 +1,15 @@
-<select>
+<!-- <select #dropdown (change)="currencyService.setCurrency(dropdown.value)" >
     @for (currency of currencyService.currencies(); track currency.code) {
     <option [value]="currency.code">
       {{ currency.code }} ({{ currency.symbol }})
     </option>
     }
-  </select>
+  </select> -->
   
+  <select [(ngModel)]="selectedCurrency" (ngModelChange)="currencyService.setCurrency($event)" name="currency">
+    @for (currency of currencyService.currencies(); track currency.code) {
+      <option [value]="currency.code">
+        {{ currency.code }} ({{ currency.symbol }})
+      </option>
+      }
+  </select>
